# outline-authentik-groupsync

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/oasync/: __init__.py  utils.py
