[project]
name = "oasync"
version = "0.1.0"
description = "Synchronize group assignments between an Outline document and Authentik using Outline webhooks."
authors = [
    {name = "Mix", email = "32300164+mnixry@users.noreply.github.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.2",
    "pydantic-settings>=2.5.2",
    "httpx[http2]>=0.27.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.9",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "G",     # flake8-logging-format
    "LOG",   # flake8-logging
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "F",     # Pyflakes
    "TRY",   # tryceratops
    "I",     # isort
    "UP",    # pyupgrade
    "C90",   # complexity
    "N",     # naming
    "RUF",   # Ruff-specific rules
]
lint.ignore = [
    "B008",   # Do not perform calls in argument defaults
    "TRY003", # Avoid specifying long messages outside the exception class
]
target-version = "py312"
